corrected the path

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <header>
     <nav class="navbar">
-        <img src="./assets/images/logo.svg" class="nav-logo">
+        <img src="logo.svg" class="nav-logo">
         <ul>
             <li class="nav-link">Home</li>
             <li class="nav-link">News</li>
@@ -22,7 +22,7 @@
     </header>
     <div class="grid-container">
         <section class="image-section">
-            <img src="./assets/images/image-web-3-desktop.jpg" class="image">
+            <img src="image-web-3-desktop.jpg" class="image">
         </section>
         <section class="side-news">
             <h2 class="side-news-heading">New</h2>
@@ -48,7 +48,7 @@
             <button class="sub-main-button">READ MORE</button>
             </div>
         <div class="footer">
-            <img class="footer-image" src="./assets/images/image-retro-pcs.jpg" alt="">
+            <img class="footer-image" src="image-retro-pcs.jpg" alt="">
             <div>
             <p class="footer-num">01</p>
             <p class="footer-lead">Reviving Retro PCs</p>
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="footer">
-            <img class="footer-image"src="./assets/images/image-top-laptops.jpg" alt="">
+            <img class="footer-image"src="image-top-laptops.jpg" alt="">
             <div>
             <p class="footer-num">02</p>
             <p class="footer-lead">Top 10 laptops of 2022</p>
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class="footer">
-            <img class="footer-image" src="./assets/images/image-gaming-growth.jpg" alt="">
+            <img class="footer-image" src="image-gaming-growth.jpg" alt="">
             <div>
             <p class="footer-num">03</p>
             <p class="footer-lead">The growth of gaming</p>
